src/test/deca/context/invalid/resultats/test_visibility_cond2-cont.res
./src/test/deca/context/invalid/test_visibility_cond2.deca:26:9: The type of the expression (A) is not a subtype of the current class  B
